--- a/DynamicPDFCreator/App.config
+++ b/DynamicPDFCreator/App.config
@@ -1,6 +1,16 @@
-﻿<?xml version="1.0" encoding="utf-8" ?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
-    <startup> 
-        <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.7.2" />
-    </startup>
+  <configSections>
+    <section name="hibernate-configuration" type="NHibernate.Cfg.ConfigurationSectionHandler, NHibernate" />
+  </configSections>
+  <startup>
+    <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.7.2" />
+  </startup>
+  <hibernate-configuration xmlns="urn:nhibernate-configuration-2.2">
+    <session-factory>
+      <property name="dialect">NHibernate.Dialect.MsSql2005Dialect</property>
+      <property name="connection.connection_string">Data Source=WIN-M0M11N9GCQJ\SQLEXPRESS;Initial Catalog=Eictronic_V1_1;Integrated Security=False;Persist Security Info=True;User ID=Boden;Password=SQLServerxxX1Y2Z3</property>
+      <mapping assembly="DynamicPDFCreator" />
+    </session-factory>
+  </hibernate-configuration>
 </configuration>
