--- a/DynamicPDFCreator/packages.config
+++ b/DynamicPDFCreator/packages.config
@@ -1,8 +1,16 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="Antlr3.Runtime" version="3.5.1" targetFramework="net472" />
+  <package id="Common.Logging" version="3.4.1" targetFramework="net472" />
+  <package id="Common.Logging.Core" version="3.4.1" targetFramework="net472" />
+  <package id="HtmlRenderer.Core" version="1.5.0.5" targetFramework="net472" />
+  <package id="HtmlRenderer.PdfSharp" version="1.5.0.6" targetFramework="net472" />
   <package id="Iesi.Collections" version="4.0.4" targetFramework="net472" />
+  <package id="Iron.Assets.Rendering.Windows" version="17.0.0" targetFramework="net472" />
+  <package id="Microsoft.CSharp" version="4.0.1" targetFramework="net472" />
   <package id="NHibernate" version="5.2.7" targetFramework="net472" />
+  <package id="PDFsharp" version="1.50.5147" targetFramework="net472" />
+  <package id="Portable.BouncyCastle" version="1.8.5" targetFramework="net472" />
   <package id="Remotion.Linq" version="2.2.0" targetFramework="net472" />
   <package id="Remotion.Linq.EagerFetching" version="2.2.0" targetFramework="net472" />
 </packages>
