--- a/DynamicPDFCreator/packages.config
+++ b/DynamicPDFCreator/packages.config
@@ -6,11 +6,11 @@
   <package id="HtmlRenderer.Core" version="1.5.1-beta1" targetFramework="net472" />
   <package id="HtmlRenderer.PdfSharp" version="1.5.1-beta1" targetFramework="net472" />
   <package id="Iesi.Collections" version="4.0.4" targetFramework="net472" />
-  <package id="Iron.Assets.Rendering.Windows" version="17.0.0" targetFramework="net472" />
   <package id="Microsoft.CSharp" version="4.7.0" targetFramework="net472" />
   <package id="NHibernate" version="5.2.7" targetFramework="net472" />
   <package id="PDFsharp" version="1.50.5147" targetFramework="net472" />
   <package id="Portable.BouncyCastle" version="1.8.6" targetFramework="net472" />
   <package id="Remotion.Linq" version="2.2.0" targetFramework="net472" />
   <package id="Remotion.Linq.EagerFetching" version="2.2.0" targetFramework="net472" />
+  <package id="RtfPipe" version="1.0.7322.27725" targetFramework="net472" />
 </packages>
