--- a/DynamicPDFCreator/DynamicPDFCreator.csproj
+++ b/DynamicPDFCreator/DynamicPDFCreator.csproj
@@ -91,6 +91,12 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Classes\DBManager.cs" />
+    <Compile Include="Classes\EditDataset.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Classes\EditDataset.Designer.cs">
+      <DependentUpon>EditDataset.cs</DependentUpon>
+    </Compile>
     <Compile Include="Classes\ErrorCodes.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -112,6 +118,9 @@
     </Compile>
     <Compile Include="Classes\Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <EmbeddedResource Include="Classes\EditDataset.resx">
+      <DependentUpon>EditDataset.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="MainForm.resx">
       <DependentUpon>MainForm.cs</DependentUpon>
     </EmbeddedResource>
