--- a/DynamicPDFCreator/DynamicPDFCreator.csproj
+++ b/DynamicPDFCreator/DynamicPDFCreator.csproj
@@ -116,6 +116,7 @@
     <Compile Include="Classes\FatalErrorForm.Designer.cs">
       <DependentUpon>FatalErrorForm.cs</DependentUpon>
     </Compile>
+    <Compile Include="Interfaces\EVU.cs" />
     <Compile Include="Interfaces\IPDFWriter.cs" />
     <Compile Include="Interfaces\Wupfl.cs" />
     <Compile Include="MainForm.cs">
