--- a/DynamicPDFCreator/DynamicPDFCreator.csproj
+++ b/DynamicPDFCreator/DynamicPDFCreator.csproj
@@ -122,6 +122,7 @@
     <Compile Include="Entities\PDFCreatorModels2.TblAnsprechpartner2Projekt.cs" />
     <Compile Include="Entities\PDFCreatorModels2.TblProjekte.cs" />
     <Compile Include="Entities\PDFCreatorModels3.TblBearbeiter.cs" />
+    <Compile Include="Entities\PDFCreatorModels3.TblAnsprechpartnerTyp.cs" />
     <Compile Include="Entities\PDFCreatorModels3.TblWesiTeam.cs" />
     <Compile Include="Classes\FatalErrorForm.cs">
       <SubType>Form</SubType>
@@ -253,6 +254,7 @@
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
     <Content Include="HTML\Wupfl.txt" />
+    <EmbeddedResource Include="Mapping\PDFCreatorModels3.TblAnsprechpartnerTyp.hbm.xml" />
     <EmbeddedResource Include="Mapping\PDFCreatorModels3.TblWesiTeam.hbm.xml" />
     <EmbeddedResource Include="Mapping\PDFCreatorModels3.TblBearbeiter.hbm.xml" />
     <EmbeddedResource Include="Mapping\PDFCreatorModels2.TblProjekte.hbm.xml" />
