--- a/DynamicPDFCreator/DynamicPDFCreator.csproj
+++ b/DynamicPDFCreator/DynamicPDFCreator.csproj
@@ -131,6 +131,7 @@
       <DependentUpon>FatalErrorForm.cs</DependentUpon>
     </Compile>
     <Compile Include="Interfaces\AbstimmungNaturschutz.cs" />
+    <Compile Include="Interfaces\Kampfmittel.cs" />
     <Compile Include="Interfaces\Zustimmungsbescheid.cs" />
     <Compile Include="Interfaces\EVU.cs" />
     <Compile Include="Interfaces\IPDFWriter.cs" />
@@ -142,6 +143,7 @@
       <DependentUpon>MainForm.cs</DependentUpon>
     </Compile>
     <Compile Include="Classes\Program.cs" />
+    <Compile Include="Pflichtfelder_Klassen\Pflicht_Kampfmittel.cs" />
     <Compile Include="Pflichtfelder_Klassen\Pflicht_AbstimmungNaturschutz.cs" />
     <Compile Include="Pflichtfelder_Klassen\Pflichtfelder.cs" />
     <Compile Include="Pflichtfelder_Klassen\Pflicht_EVU.cs" />
