Alte Hibernate konfiguration entfernt, im begriff neue zu implementieren. Klassen umbenannt, neue mappingfiles erstellt

--- a/DynamicPDFCreator/App.config
+++ b/DynamicPDFCreator/App.config
@@ -9,7 +9,7 @@
   <hibernate-configuration xmlns="urn:nhibernate-configuration-2.2">
     <session-factory>
       <property name="dialect">NHibernate.Dialect.MsSql2005Dialect</property>
-      <property name="connection.connection_string">Data Source=WIN-M0M11N9GCQJ\SQLEXPRESS;Initial Catalog=Eictronic_V1_1;Integrated Security=False;Persist Security Info=True;User ID=Boden;Password=SQLServerxxX1Y2Z3</property>
+      <property name="connection.connection_string">Data Source=WIN-M0M11N9GCQJ\SQLEXPRESS;Initial Catalog=Eictronic_PDF_Creator;Integrated Security=False;Persist Security Info=True;User ID=Boden;Password=SQLServerxxX1Y2Z3</property>
       <mapping assembly="DynamicPDFCreator" />
     </session-factory>
   </hibernate-configuration>
@@ -18,6 +18,10 @@
       <dependentAssembly>
         <assemblyIdentity name="PdfSharp" publicKeyToken="f94615aa0424f9eb" culture="neutral" />
         <bindingRedirect oldVersion="0.0.0.0-1.50.5147.0" newVersion="1.50.5147.0" />
+      </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="NHibernate" publicKeyToken="aa95f207798dfdb4" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-5.2.0.0" newVersion="5.2.0.0" />
       </dependentAssembly>
     </assemblyBinding>
   </runtime>
