--- a/DynamicPDFCreator/packages.config
+++ b/DynamicPDFCreator/packages.config
@@ -1,6 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="Antlr3.Runtime" version="3.5.1" targetFramework="net472" />
+  <package id="FluentNHibernate" version="2.1.2" targetFramework="net472" />
   <package id="HtmlRenderer.Core" version="1.5.1-beta1" targetFramework="net472" />
   <package id="HtmlRenderer.PdfSharp" version="1.5.1-beta1" targetFramework="net472" />
   <package id="Iesi.Collections" version="4.0.4" targetFramework="net472" />
