--- a/DynamicPDFCreator/DynamicPDFCreator.csproj
+++ b/DynamicPDFCreator/DynamicPDFCreator.csproj
@@ -221,6 +221,7 @@
     <EmbeddedResource Include="Mapping neu\WesiTeam.hbm.xml" />
     <EmbeddedResource Include="Mapping neu\Bearbeiter.hbm.xml" />
     <EmbeddedResource Include="Mapping neu\AnschreibenTyp.hbm.xml" />
+    <EmbeddedResource Include="Mapping neu\Ansprechpartner.hbm.xml" />
     <Content Include="Mapping\PDF.hbm.xml" />
     <None Include="Mapping\PDFCreatorModels3.TblAnsprechpartnerTyp.hbm.xml" />
     <None Include="Mapping\PDFCreatorModels3.TblWesiTeam.hbm.xml" />
