Many to many funktioniert

--- a/DynamicPDFCreator/App.config
+++ b/DynamicPDFCreator/App.config
@@ -6,13 +6,13 @@
   <startup>
     <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.7.2" />
   </startup>
-  <hibernate-configuration xmlns="urn:nhibernate-configuration-2.2">
+  <!--<hibernate-configuration xmlns="urn:nhibernate-configuration-2.2">
     <session-factory>
       <property name="dialect">NHibernate.Dialect.MsSql2005Dialect</property>
       <property name="connection.connection_string">Data Source=WIN-M0M11N9GCQJ\SQLEXPRESS;Initial Catalog=Eictronic_PDF_Creator;Integrated Security=False;Persist Security Info=True;User ID=Boden;Password=SQLServerxxX1Y2Z3</property>
       <mapping assembly="DynamicPDFCreator" />
     </session-factory>
-  </hibernate-configuration>
+  </hibernate-configuration>-->
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
       <dependentAssembly>
