--- a/DynamicPDFCreator/packages.config
+++ b/DynamicPDFCreator/packages.config
@@ -5,6 +5,7 @@
   <package id="HtmlRenderer.Core" version="1.5.1-beta1" targetFramework="net472" />
   <package id="HtmlRenderer.PdfSharp" version="1.5.1-beta1" targetFramework="net472" />
   <package id="Iesi.Collections" version="4.0.4" targetFramework="net472" />
+  <package id="log4net" version="2.0.8" targetFramework="net472" />
   <package id="Microsoft.CSharp" version="4.7.0" targetFramework="net472" />
   <package id="NHibernate" version="5.2.7" targetFramework="net472" />
   <package id="PDFsharp" version="1.50.5147" targetFramework="net472" />
