--- a/DynamicPDFCreator/DynamicPDFCreator.csproj
+++ b/DynamicPDFCreator/DynamicPDFCreator.csproj
@@ -136,6 +136,7 @@
     <Compile Include="Classes\FatalErrorForm.Designer.cs">
       <DependentUpon>FatalErrorForm.cs</DependentUpon>
     </Compile>
+    <Compile Include="Entities\Zusatzanlage.cs" />
     <Compile Include="Interfaces\AbstimmungNaturschutz.cs" />
     <Compile Include="Interfaces\Kampfmittel.cs" />
     <Compile Include="Interfaces\Zustimmungsbescheid.cs" />
@@ -229,6 +230,7 @@
     <EmbeddedResource Include="Mapping neu\Projekt.hbm.xml" />
     <EmbeddedResource Include="Mapping neu\PDF.hbm.xml" />
     <EmbeddedResource Include="Mapping neu\AnsprechpartnerTyp.hbm.xml" />
+    <EmbeddedResource Include="Mapping neu\Zusatzanlage.hbm.xml" />
     <Content Include="Mapping\PDF.hbm.xml" />
     <None Include="Mapping\PDFCreatorModels3.TblAnsprechpartnerTyp.hbm.xml" />
     <None Include="Mapping\PDFCreatorModels3.TblWesiTeam.hbm.xml" />
