--- a/DynamicPDFCreator/DynamicPDFCreator.csproj
+++ b/DynamicPDFCreator/DynamicPDFCreator.csproj
@@ -123,6 +123,7 @@
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="Classes\PDF.cs" />
+    <Compile Include="Classes\WhitespaceCharacterCompare.cs" />
     <Compile Include="Combobox Items\CmbEmpfaenger.cs" />
     <Compile Include="Entities\AnschreibenTyp.cs" />
     <Compile Include="Entities\Ansprechpartner.cs" />
@@ -220,6 +221,7 @@
     <None Include="Mapping\PDFCreatorModels.TblAuftraege.hbm.xml" />
   </ItemGroup>
   <ItemGroup>
+    <None Include="Resources\edit.png" />
     <EmbeddedResource Include="hibernate.cfg.xml">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </EmbeddedResource>
