--- a/DynamicPDFCreator/DynamicPDFCreator.csproj
+++ b/DynamicPDFCreator/DynamicPDFCreator.csproj
@@ -119,9 +119,7 @@
     <Compile Include="Classes\EditDataset.Designer.cs">
       <DependentUpon>EditDataset.cs</DependentUpon>
     </Compile>
-    <Compile Include="Classes\ErrorCodes.cs">
-      <SubType>Form</SubType>
-    </Compile>
+    <Compile Include="Classes\FieldHandler.cs" />
     <Compile Include="Classes\PDF.cs" />
     <Compile Include="Entities\AnschreibenTyp.cs" />
     <Compile Include="Entities\Ansprechpartner.cs" />
