--- a/DynamicPDFCreator/DynamicPDFCreator.csproj
+++ b/DynamicPDFCreator/DynamicPDFCreator.csproj
@@ -120,7 +120,6 @@
       <DependentUpon>EditDataset.cs</DependentUpon>
     </Compile>
     <Compile Include="Classes\FieldHandler.cs" />
-    <Compile Include="Controller\IMainView.cs" />
     <Compile Include="Entities\DBpdf.cs" />
     <Compile Include="Classes\PDF.cs" />
     <Compile Include="Entities\AnschreibenTyp.cs" />
@@ -227,9 +226,6 @@
     <EmbeddedResource Include="Mapping\AnsprechpartnerTyp.hbm.xml" />
     <EmbeddedResource Include="Mapping\Zusatzanlage.hbm.xml" />
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="Models\" />
-    <Folder Include="Views\" />
-  </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
