--- a/DynamicPDFCreator/DynamicPDFCreator.csproj
+++ b/DynamicPDFCreator/DynamicPDFCreator.csproj
@@ -160,6 +160,12 @@
     <Compile Include="Pflichtfelder_Klassen\Pflicht_EVU.cs" />
     <Compile Include="Pflichtfelder_Klassen\Pflicht_Wupfl.cs" />
     <Compile Include="Pflichtfelder_Klassen\Pflicht_Zustimmungsbescheid.cs" />
+    <Compile Include="PopupMissingFolder.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="PopupMissingFolder.Designer.cs">
+      <DependentUpon>PopupMissingFolder.cs</DependentUpon>
+    </Compile>
     <Compile Include="Properties\Pflichtfelder.Designer.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
@@ -174,6 +180,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="MainForm.resx">
       <DependentUpon>MainForm.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="PopupMissingFolder.resx">
+      <DependentUpon>PopupMissingFolder.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Pflichtfelder.resx">
       <Generator>ResXFileCodeGenerator</Generator>
