--- a/DynamicPDFCreator/DynamicPDFCreator.csproj
+++ b/DynamicPDFCreator/DynamicPDFCreator.csproj
@@ -36,7 +36,7 @@
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'Develop_EVU|AnyCPU'">
     <DebugSymbols>true</DebugSymbols>
-    <OutputPath>bin\Develop_EVU\</OutputPath>
+    <OutputPath>bin\RansomFree_DevelopEVU\</OutputPath>
     <DefineConstants>DEBUG;TRACE</DefineConstants>
     <DebugType>full</DebugType>
     <PlatformTarget>AnyCPU</PlatformTarget>
@@ -45,7 +45,7 @@
     <Prefer32Bit>true</Prefer32Bit>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'Produktiv|AnyCPU'">
-    <OutputPath>..\..\..\..\..\..\Datenbank\Datenbank_System_Dateien\PDF Creator\</OutputPath>
+    <OutputPath>..\..\..\..\..\..\Datenbank\Dienstprogramme\Formulargenerator\</OutputPath>
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="Antlr3.Runtime, Version=3.5.0.2, Culture=neutral, PublicKeyToken=eb42632606e9261f, processorArchitecture=MSIL">
