--- a/DynamicPDFCreator/DynamicPDFCreator.csproj
+++ b/DynamicPDFCreator/DynamicPDFCreator.csproj
@@ -137,6 +137,7 @@
       <DependentUpon>FatalErrorForm.cs</DependentUpon>
     </Compile>
     <Compile Include="Entities\Zusatzanlage.cs" />
+    <Compile Include="Interfaces\AbstimmungDenkmalschutz.cs" />
     <Compile Include="Interfaces\AbstimmungNaturschutz.cs" />
     <Compile Include="Interfaces\EigenesFormular.cs" />
     <Compile Include="Interfaces\Kampfmittel.cs" />
@@ -153,6 +154,7 @@
       <DependentUpon>MainForm.cs</DependentUpon>
     </Compile>
     <Compile Include="Classes\Program.cs" />
+    <Compile Include="Pflichtfelder_Klassen\Pflicht_AbstimmungDenkmalschutz.cs" />
     <Compile Include="Pflichtfelder_Klassen\Pflicht_EigenesFormular.cs" />
     <Compile Include="Pflichtfelder_Klassen\Pflicht_Kampfmittel.cs" />
     <Compile Include="Pflichtfelder_Klassen\Pflicht_AbstimmungNaturschutz.cs" />
